# papersnitch

./: .dockerignore  .gitignore  DEPLOYMENT_CHECKLIST.md  DOMAIN_SETUP_GUIDE.md  MARIADB_UPGRADE.md  NODE_D_IMPLEMENTATION.md  QUICK_START_DOMAIN_MIGRATION.md  README.md  RESET_DB.md  TECHNICAL_DESCRIPTION_FOR_PAPER.md  TOKEN_STATISTICS_IMPROVEMENTS.md  USER_AUTHENTICATION_CHANGES.md  UTILITIES_COMMANDS.md  WORKFLOW_ENGINE_DELIVERY.md  WORKFLOW_ENGINE_INSTALLED.md  categories_embeddings_1536.json  certbot_emission.sh  check_workflow.sh  code_sample.json  compose.dev.yml  compose.prod.yml  compose.yml  compose_command.txt  compute_score.py  create-dev-stack.sh  create_complex_dag_test.py  db_schema.dot  debug-dev-stack.sh  debug_aspect_retrieval.py  env_template  info_llm.txt  json_checklist.json  migrations.sh  old.compose.yml  project_feedbacks.txt  project_history.txt  requirements.txt  scrape_multiple_conferences.sh  update_colors.py  verify_workflow_installation.py
app/: .token_usage  CONFERENCE_SCRAPING.md  Pipfile  analyze_paper_types.py  categories_embeddings_1024.json  categories_embeddings_1536.json  categories_embeddings_256.json  celerybeat-schedule  check_miccai_2021_status.py  create_complex_dag_test.py  create_parallel_workflow_test.py  debug_aspect_retrieval.py  debug_scraper_flow.py  dockerfile  entrypoint.dev.sh  entrypoint.prod.sh  extract_workflow_token_data.py  generate_miccai_code_chart.py  generate_missing_diagrams.py  load_data.py  manage.py  miccai_2025_papers.json  pyproject.toml  read_pdf.py  requirements.txt  scraper.py  test_cache_durability.py  test_crawl4ai.py  test_embedding.py  test_ingest_steroids.py  test_langgraph.py  test_llm.py  test_moonshot.py  test_pdf2html.py  test_reproducibility_nodes.py  view_analysis.py  workflow_token_data.json
app/annotator/: admin.py  create_annotator.py  forms.py  models.py  urls.py  utils.py  views.py
app/annotator/fixtures/: categories.json  categories_embeddings_1536_colored.json  categories_with_embeddings.json
app/annotator/migrations/: 0001_initial.py  0002_document_paper.py  0003_annotationcategory_embedding.py  0004_annotation_embedding_annotation_similarity_score.py  0005_annotation_user.py
app/annotator/templates/annotator/: annotate.html  base.html  document_list.html  home.html  new_annotate.html  upload.html
app/static/: 0308_paper.pdf.tei.xml
app/static/css/: labeling.css  style.css
app/static/js/: script.js
app/templates/: base.html  home.html
app/templates/registration/: login.html
app/web/: __init__.py  asgi.py  celery.py  settings.py  settingsold.py  urls.py  views.py  wsgi.py
app/web/settings/: base.py  production.py
app/webApp/: README.md  admin.py  apps.py  context_processors.py  functions.py  models.py  models_schema.py  scraping_views.py  signals.py  tasks.py  test_gobrid.py  urls.py  views.py
app/webApp/fixtures/: criteria.json  llm_configs.json  llm_model_configs.json  papers_info.json  prompt.json
app/webApp/fixtures/scraper_schemas/: international_conference_on_medical_image_computing_and_computer_assisted_intervention_schema.json  miccai_2021_schema.json  miccai_2022_schema.json  miccai_2023_schema.json  miccai_2024_schema.json  miccai_2025_schema.json
app/webApp/management/commands/: check_task_status.py  initialize_criteria_embeddings.py  initialize_dataset_criteria_embeddings.py  process_paper.py  register_workflows.py  remove_duplicate_papers.py  scrape_conference.py  view_analysis.py
app/webApp/migrations/: 0001_initial.py  0002_alter_llmmodelconfig_reasoning_effort.py  0002_alter_paper_supp_materials.py  0002_sectiontype.py  0003_alter_paper_last_update.py  0003_criterion_weight.py  0003_delete_section.py  0004_categories_delete_sectiontype.py  0004_prompt.py  0005_alter_prompt_name_alter_prompt_template.py  0005_conference_alter_categories_options_paper_metareview_and_more.py  0006_analysistask.py  0006_author_operations_delete_categories_and_more.py  0007_analysistask_is_read.py  0008_alter_analysiscriterion_score.py  0009_alter_llmmodelconfig_api_key_env_var.py  0010_alter_paper_file.py  0010_rename_pdf_file_paper_file_and_more.py  0011_criterion_analysis_analysiscriterion.py  0011_databaseschema.py  0012_analysis_user.py  0012_remove_pdfpaper.py  0013_add_metadata_field.py  0013_bugreport.py  0014_alter_bugreport_options_bugreport_report_type_and_more.py  0014_conference_logo.py  0015_alter_bugreport_report_type_tokenusage.py  0015_alter_paper_authors.py  0016_alter_conference_options_remove_conference_url_and_more.py  0016_llmmodelconfig.py  0017_alter_conference_options_and_more.py  0017_remove_llmmodelconfig_thinking_enabled_and_more.py  0018_conference_is_scraping_conference_last_scrape_end_and_more.py  0019_paper_sections.py  0020_alter_paper_conference.py  0021_paper_section_embeddings.py  0022_alter_papersectionembedding_options_and_more.py  0023_codefileembedding.py  0024_add_reproducibility_aspect_embedding.py  0025_reproducibilitychecklistcriterion.py  (+1 more)
app/webApp/services/: CODE_REPRODUCIBILITY_ANALYSIS.md  __init__.py  analysis_graph.py  conference_scraper.py  graphs_state.py  llm_analysis.py  paper_processing_workflow.py  pydantic_schemas.py
app/webApp/services/graphs/: __init__.py  base_workflow_graph.py  code_only_workflow.py  (+2 more)
app/workflow_engine/: DAG_VISUALIZATION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  __init__.py  admin.py  apps.py  examples.py  handlers.py  models.py  requirements.txt  signals.py  tasks.py  tests.py  utils.py
app/workflow_engine/migrations/: 0001_initial.py  0002_workflowdefinition_dag_diagram.py  0003_remove_unique_paper_run_number.py  0004_alter_workflowdefinition_name_and_more.py  0005_add_token_tracking_fields.py  0006_add_cancelled_status.py  0007_rename_workflow_e_workflo_cached_idx_workflow_en_workflo_88e7a7_idx_and_more.py  0008_workflowrun_highlighted_pdf.py  0009_remove_workflowrun_highlighted_pdf.py  0010_nodeartifact_file.py  0011_delete_langgraphcheckpoint.py
app/workflow_engine/services/: async_orchestrator.py  langgraph_integration.py  orchestrator.py
(+54 files in other folders)
