[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0 ; python_full_version >= '3.9'",
    "aiohappyeyeballs==2.6.1 ; python_full_version >= '3.9'",
    "aiohttp==3.13.2 ; python_full_version >= '3.9'",
    "aiosignal==1.4.0 ; python_full_version >= '3.9'",
    "aiosqlite==0.21.0 ; python_full_version >= '3.9'",
    "alphashape==1.3.1",
    "annotated-types==0.7.0 ; python_full_version >= '3.8'",
    "anyio==4.11.0 ; python_full_version >= '3.9'",
    "asgiref==3.10.0 ; python_full_version >= '3.9'",
    "asyncio==4.0.0 ; python_full_version >= '3.4'",
    "asyncio>=4.0.0",
    "attrs==25.4.0 ; python_full_version >= '3.9'",
    "beautifulsoup4==4.14.2 ; python_full_version >= '3.7'",
    "brotli==1.2.0",
    "certifi==2025.11.12 ; python_full_version >= '3.7'",
    "cffi==2.0.0 ; python_full_version >= '3.9'",
    "chardet==5.2.0 ; python_full_version >= '3.7'",
    "charset-normalizer==3.4.4 ; python_full_version >= '3.7'",
    "click==8.3.0 ; python_full_version >= '3.10'",
    "click-log==0.4.0",
    "crawl4ai==0.7.6 ; python_full_version >= '3.10'",
    "crawl4ai>=0.7.6",
    "cryptography==46.0.3 ; python_full_version >= '3.8'",
    "cssselect==1.3.0 ; python_full_version >= '3.9'",
    "distro==1.9.0 ; python_full_version >= '3.6'",
    "django==5.2.7 ; python_full_version >= '3.10'",
    "dotenv==0.9.9",
    "fake-http-header==0.3.5 ; python_full_version >= '3.6'",
    "fake-useragent==2.2.0 ; python_full_version >= '3.9'",
    "fastuuid==0.14.0 ; python_full_version >= '3.8'",
    "filelock==3.20.0 ; python_full_version >= '3.10'",
    "frozenlist==1.8.0 ; python_full_version >= '3.9'",
    "fsspec==2025.10.0 ; python_full_version >= '3.9'",
    "google-genai>=1.50.0",
    "greenlet==3.2.4 ; python_full_version >= '3.9'",
    "gunicorn==23.0.0 ; python_full_version >= '3.7'",
    "h11==0.16.0 ; python_full_version >= '3.8'",
    "h2==4.3.0",
    "hf-xet==1.2.0 ; platform_machine == 'AMD64' or platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'arm64' or platform_machine == 'x86_64'",
    "hpack==4.1.0 ; python_full_version >= '3.9'",
    "httpcore==1.0.9 ; python_full_version >= '3.8'",
    "httpx[http2]==0.28.1 ; python_full_version >= '3.8'",
    "huggingface-hub==1.1.2 ; python_full_version >= '3.9'",
    "humanize==4.14.0 ; python_full_version >= '3.10'",
    "hyperframe==6.1.0 ; python_full_version >= '3.9'",
    "idna==3.11 ; python_full_version >= '3.8'",
    "importlib-metadata==8.7.0 ; python_full_version >= '3.9'",
    "jinja2==3.1.6 ; python_full_version >= '3.7'",
    "jiter==0.12.0 ; python_full_version >= '3.9'",
    "joblib==1.5.2 ; python_full_version >= '3.9'",
    "jsonschema==4.25.1 ; python_full_version >= '3.9'",
    "jsonschema-specifications==2025.9.1 ; python_full_version >= '3.9'",
    "lark==1.3.1 ; python_full_version >= '3.8'",
    "litellm==1.79.3 ; python_full_version >= '3.8'",
    "lxml==5.4.0 ; python_full_version >= '3.6'",
    "markdown-it-py==4.0.0 ; python_full_version >= '3.10'",
    "markupsafe==3.0.3 ; python_full_version >= '3.9'",
    "mdurl==0.1.2 ; python_full_version >= '3.7'",
    "multidict==6.7.0 ; python_full_version >= '3.9'",
    "networkx==3.5 ; python_full_version >= '3.11'",
    "nltk==3.9.2 ; python_full_version >= '3.9'",
    "openai==2.7.2 ; python_full_version >= '3.9'",
    "packaging==25.0 ; python_full_version >= '3.8'",
    "patchright==1.56.0 ; python_full_version >= '3.9'",
    "pillow==12.0.0 ; python_full_version >= '3.10'",
    "playwright==1.56.0 ; python_full_version >= '3.9'",
    "propcache==0.4.1 ; python_full_version >= '3.9'",
    "psutil==7.1.3 ; python_full_version >= '3.6'",
    "pycparser==2.23 ; python_full_version >= '3.8'",
    "pydantic>=2.12.4",
    "pydantic==2.12.4 ; python_full_version >= '3.9'",
    "pydantic-core==2.41.5 ; python_full_version >= '3.9'",
    "pyee==13.0.0 ; python_full_version >= '3.8'",
    "pygments==2.19.2 ; python_full_version >= '3.8'",
    "pymysql==1.1.2 ; python_full_version >= '3.8'",
    "pyopenssl==25.3.0 ; python_full_version >= '3.7'",
    "pypdf==6.2.0 ; python_full_version >= '3.9'",
    "python-dotenv==1.1.1 ; python_full_version >= '3.9'",
    "pyyaml==6.0.3 ; python_full_version >= '3.8'",
    "rank-bm25==0.2.2",
    "referencing==0.37.0 ; python_full_version >= '3.10'",
    "regex==2025.11.3 ; python_full_version >= '3.9'",
    "requests==2.32.5 ; python_full_version >= '3.9'",
    "rich==14.2.0 ; python_full_version >= '3.8'",
    "rpds-py==0.28.0 ; python_full_version >= '3.10'",
    "rtree==1.4.1 ; python_full_version >= '3.9'",
    "scipy==1.16.3 ; python_full_version >= '3.11'",
    "shapely==2.1.2 ; python_full_version >= '3.10'",
    "shellingham==1.5.4 ; python_full_version >= '3.7'",
    "sniffio==1.3.1 ; python_full_version >= '3.7'",
    "snowballstemmer==2.2.0",
    "soupsieve==2.8 ; python_full_version >= '3.9'",
    "sqlparse==0.5.3 ; python_full_version >= '3.8'",
    "tf-playwright-stealth==1.2.0 ; python_full_version >= '3.9' and python_full_version < '4'",
    "tiktoken==0.12.0 ; python_full_version >= '3.9'",
    "tokenizers==0.22.1 ; python_full_version >= '3.9'",
    "tqdm==4.67.1 ; python_full_version >= '3.7'",
    "trimesh==4.9.0 ; python_full_version >= '3.8'",
    "typer-slim==0.20.0 ; python_full_version >= '3.8'",
    "typing-extensions==4.15.0 ; python_full_version >= '3.9'",
    "typing-inspection==0.4.2 ; python_full_version >= '3.9'",
    "urllib3==2.5.0 ; python_full_version >= '3.9'",
    "xxhash==3.6.0 ; python_full_version >= '3.7'",
    "yarl==1.22.0 ; python_full_version >= '3.9'",
    "zipp==3.23.0 ; python_full_version >= '3.9'",
    "gitingest>=0.3.1",
    "openai>=2.7.2",
    "beautifulsoup4>=4.14.2",
    "lxml>=5.4.0",
    "celery>=5.6.2",
    "redis>=7.1.0",
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "watchfiles>=1.1.1",
]
